[package]
name = "ts1-compiler"
version = "1.3.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
anyhow = "1.0.82"
binrw = "0.13.3"
clap = { version = "4.5.4", features = ["derive"] }
formatx = "0.2.2"
image = "0.25.1"
imagequant = "4.3.0"
quick-xml = { version = "0.31.0", features = ["serialize"] }
rand = "0.8.5"
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_json = "1.0.116"
serde_with = "3.7.0"
winreg = "0.52.0"
