[package]
name = "ts1-compiler"
version = "1.5.0"
edition = "2024"
license = "MPL-2.0"

[dependencies]
anyhow = "1.0.102"
binrw = "0.13.4"
clap = { version = "4.6.0", features = ["derive"] }
formatx = "0.2.4"
image = "0.25.10"
imagequant = "4.4.1"
quick-xml = { version = "0.31.0", features = ["serialize"] }
rand = "0.8.5"
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.149"
serde_with = "3.18.0"
